fix(movie-page): white space after main container

--- a/frontend/src/pages/MoviePage/MoviePage.module.scss
+++ b/frontend/src/pages/MoviePage/MoviePage.module.scss
@@ -38,6 +38,7 @@
     .main {
         @include container();
         background-color: $blackColor;
+        padding-bottom: 20px;
 
         .info {
             padding: 20px 0px;
